# my-portfolio-hub-v2

./: .dockerignore  .gitignore  AI_CENTER.md  ANALYTICS_PESO_SYMBOL_FIX.md  API_DOCUMENTATION.md  AUDIT_MANIFEST.txt  AUDIT_REPORT.md  AUDIT_REPORT_CERTIFICATES.md  AUDIT_REPORT_v4.1.md  AUTH_UPGRADE_AUDIT.md  BILLING_CENTER.md  BILLING_CHECKOUT_UX_UPGRADE.md  BLOCKFORM_BRUTAL_THEME_INTEGRATION.md  BUG_REPORT.md  COMPONENT_DEPRECATIONS.md  COMPREHENSIVE_AUDIT_REPORT.md  COMPREHENSIVE_SEO_AUDIT_REPORT.md  COUNTRY_CURRENCY_CHECKOUT_UPGRADE.md  DATABASE_AUDIT_REPORT.md  DATABASE_RELIABILITY_REMEDIATION_REPORT.md  DATABASE_VALIDATION_AND_SCHEMA - Copy.sql  DEFAULT_PORTFOLIO_PROJECT_URL_FIX_REPORT.md  DELIVERABLES_OTP_AUDIT.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_DODO_CARD_MARKER.txt  DEPLOYMENT_GUIDE.md  DEPLOYMENT_GUIDE_v6_7_plan_hierarchy.md  DEPLOYMENT_SUMMARY.md  DEPLOY_DODO_MIGRATION_FIX.md  DEPLOY_STARTUP_FIX.md  DESIGN_SYSTEM.md  DESIGN_TOKEN_DEPRECATIONS.md  DISCOUNT_CHECKOUT_INTEGRATION.md  DODO_BASIC_STARTER_MAPPING_FIX.md  DODO_CHECKOUT_TOGGLE_FIX.md  DODO_PAYMENTS_INTEGRATION.md  DODO_SUPERADMIN_VISIBILITY_FIX.md  DUPLICATE_MIGRATION_ANALYSIS.txt  Dockerfile  ENV_ADDITIONS.txt  (+97 more)
DOCUMENTATION/: README.md  (+12 more)
my-portfolio-hub-v6_6-smtp-fix/: 00_README_REMEDIATION.md  APPLY_PATCH.md  DELIVERABLES.txt  DEPLOYMENT_GUIDE_REMEDIATION_v5_3.md  Dockerfile  ENV_ADDITIONS.txt  LEGACY_FILES_TO_DELETE.txt  MIGRATION_AUDIT_REPORT.md  MIGRATION_GUIDE.md  PATCH_THEME_ENGINE_v6.3.md  PATCH_superadmin_mailersend.diff  PRODUCTION_READINESS_CHECKLIST.md  PRODUCTION_READINESS_REPORT.md  README.md  REMEDIATION_GUIDE.md  RENDER_DEPLOYMENT_GUIDE_PATCHED.md  REQUIREMENTS_IMPLEMENTATION_MATRIX.md  SECRETS_ROTATION_REPORT.md  THEME_MIGRATION.md  config.py  pyproject.toml  render.yaml  requirements-dev.txt  requirements.txt  run.py  web3forms_service.diff  wsgi.py
my-portfolio-hub-v6_6-smtp-fix/DOCUMENTATION/: 00_START_HERE.txt  DELIVERABLES.md  DEPLOYMENT_GUIDE_CSRF_FIX.md
my-portfolio-hub-v6_6-smtp-fix/app/: __init__.py  _superadmin_bootstrap.py  diagnostics.py  security.py  startup_validation.py  theme_context.py  theme_engine.py
my-portfolio-hub-v6_6-smtp-fix/code/: app_init_FIXED.py  app_init_csrf_fix.patch  deploy_csrf_fix.sh
(+881 files in other folders)
